--- a/src/main/resources/scl/pdi/billpaid/transaccion-view.fxml
+++ b/src/main/resources/scl/pdi/billpaid/transaccion-view.fxml
@@ -5,29 +5,28 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="600.0" maxWidth="720.0" minHeight="600.0" minWidth="720.0" prefHeight="600.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scl.pdi.billpaid.TransaccionController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e9f1f8" height="345.0" layoutX="52.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="367.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e9f1f8" height="539.0" layoutX="52.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="496.0" />
       <Label fx:id="lb_grupos" layoutX="64.0" layoutY="57.0" text="Nombre del grupo">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="lb_cantidad" layoutX="64.0" layoutY="92.0" text="000,00 €" />
-      <ListView fx:id="list_transacciones" layoutX="64.0" layoutY="115.0" prefHeight="200.0" prefWidth="324.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f0f5f7" height="345.0" layoutX="425.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="159.0" />
-      <Label fx:id="lb_transaccion" layoutX="441.0" layoutY="165.0" text="Crear transacción">
+      <Label fx:id="lb_cantidad" layoutX="64.0" layoutY="92.0" text="000,00" />
+      <ListView fx:id="list_transacciones" layoutX="64.0" layoutY="115.0" prefHeight="443.0" prefWidth="477.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f0f5f7" height="539.0" layoutX="547.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="159.0" />
+      <Label fx:id="lb_transaccion" layoutX="563.0" layoutY="349.0" text="Crear transacción">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="tf_nombre_transaccion" layoutX="430.0" layoutY="190.0" promptText="Nombre" />
-      <TextField layoutX="430.0" layoutY="215.0" promptText="Descripción" />
-      <TextField layoutX="430.0" layoutY="240.0" promptText="Cantidad" />
-      <DatePicker fx:id="date_fecha_transaccion" layoutX="430.0" layoutY="265.0" prefHeight="25.0" prefWidth="149.0" promptText="Fecha transacción" />
-      <TextField fx:id="tf_pagador_por" layoutX="430.0" layoutY="290.0" promptText="Pagado por" />
-      <TextField fx:id="tf_deber_por" layoutX="430.0" layoutY="315.0" promptText="A deber por" />
-      <Button layoutX="448.0" layoutY="344.0" mnemonicParsing="false" text="Crear transacción" />
+      <TextField fx:id="tf_nombre_transaccion" layoutX="552.0" layoutY="374.0" promptText="Nombre" />
+      <TextField fx:id="tf_descrip_trans" layoutX="552.0" layoutY="399.0" promptText="Descripción" />
+      <TextField fx:id="tf_cantidad" layoutX="552.0" layoutY="424.0" promptText="Cantidad" />
+      <DatePicker fx:id="date_fecha_transaccion" layoutX="552.0" layoutY="449.0" prefHeight="25.0" prefWidth="149.0" promptText="Fecha transacción" />
+      <TextField fx:id="tf_pagador_por" layoutX="552.0" layoutY="474.0" promptText="Pagado por" />
+      <TextField fx:id="tf_deber_por" layoutX="552.0" layoutY="499.0" promptText="A deber por" />
+      <Button layoutX="573.0" layoutY="533.0" mnemonicParsing="false" onAction="#onCrearTransaccionButtonClick" text="Crear transacción" />
    </children>
 </AnchorPane>
