--- a/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
@@ -39,6 +39,14 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
+            <Button fx:id="page03" layoutX="10.0" layoutY="119.0" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Ver Grupos" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="System Bold" size="17.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
                 <Button fx:id="page03" mnemonicParsing="false" onAction="#loadDemoGroup" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Grupo Demo" textAlignment="JUSTIFY">
                     <font>
                         <Font name="System Bold" size="17.0" />
