--- a/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
+++ b/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
@@ -18,7 +18,7 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
-                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadFXML" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Pagina Principal" textAlignment="JUSTIFY" underline="true">
+                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Pagina Principal" textAlignment="JUSTIFY" underline="true">
                     <font>
                         <Font name="System Bold" size="17.0" />
                     </font>
@@ -59,15 +59,7 @@
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
-            <ButtonBar fx:id="chartPurchase">
-               <buttons>
-                      <HBox prefHeight="244.0" prefWidth="1190.0">
-                     <children>
-                            <HBox fx:id="chartReceipt" prefHeight="260.0" prefWidth="1195.0" />
-                     </children>
-                  </HBox>
-               </buttons>
-            </ButtonBar>
+
                 <HBox prefHeight="287.0" prefWidth="1179.0" />
             </children>
         </VBox>
