--- a/src/main/resources/scl/pdi/billpaid/Creacion.fxml
+++ b/src/main/resources/scl/pdi/billpaid/Creacion.fxml
@@ -24,38 +24,6 @@
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <Button fx:id="page01" mnemonicParsing="false" onAction="#loadPage01View" prefHeight="30.0" prefWidth="172.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Perfil" textAlignment="JUSTIFY">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Crear Grupos" textAlignment="JUSTIFY">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-            <Button fx:id="page03" layoutX="10.0" layoutY="119.0" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Ver Grupos" textAlignment="JUSTIFY">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-                <Button fx:id="page031" mnemonicParsing="false" onAction="#loadDemoGroup" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Grupo Demo" textAlignment="JUSTIFY">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
 
             </children>
         </VBox>
@@ -91,30 +59,26 @@
                 <AnchorPane maxHeight="600.0" maxWidth="720.0" minHeight="600.0" minWidth="720.0" prefHeight="600.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
                     <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0" />
-                        <Label fx:id="lb_grupos" layoutX="64.0" layoutY="57.0" text="Nombre de la Transaccion">
+                        <Label fx:id="lb_grupos" layoutX="64.0" layoutY="57.0" text="Grupos">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <Label fx:id="lb_cantidad" layoutX="64.0" layoutY="92.0" text="000,00" />
-                        <ListView fx:id="list_transacciones" layoutX="10.0" layoutY="113.0" onKeyPressed="#onEliminarTransaccionSUPR" prefHeight="443.0" prefWidth="858.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="539.0" layoutX="873.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="231.0" />
-                        <Label fx:id="lb_transaccion" layoutX="934.0" layoutY="91.0" text="Crear transacción">
+                        <ListView fx:id="list_transacciones" layoutX="6.0" layoutY="113.0" onKeyPressed="#onEliminarTransaccionSUPR" prefHeight="460.0" prefWidth="866.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="548.0" layoutX="871.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="232.0" />
+                        <Label fx:id="lb_transaccion" layoutX="934.0" layoutY="91.0" text="Crear Grupo">
                             <font>
                                 <Font size="14.0" />
                             </font>
                         </Label>
                         <TextField fx:id="tf_nombre_transaccion" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
-                        <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Cantidad" />
-                        <DatePicker fx:id="date_fecha_transaccion" layoutX="890.0" layoutY="253.0" prefHeight="26.0" prefWidth="202.0" promptText="Fecha transacción" />
-                        <TextField fx:id="tf_pagador_por" layoutX="890.0" layoutY="278.0" prefHeight="26.0" prefWidth="201.0" promptText="Pagado por" />
-                        <TextField fx:id="tf_deber_por" layoutX="890.0" layoutY="303.0" prefHeight="26.0" prefWidth="201.0" promptText="A deber por" />
+                        <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Cantidad de Integrantes" />
                         <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" onAction="#onCrearTransaccionButtonClick" text="Crear transacción" />
                         <TextArea fx:id="tf_descrip_trans" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
                         <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" onAction="#onEliminarTransaccionClick" text="Eliminar" />
                     </children>
                 </AnchorPane>
-                
+
             </children>
         </VBox>
     </center>
