--- a/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
+++ b/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
@@ -18,7 +18,7 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
-                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Pagina Principal" textAlignment="JUSTIFY" underline="true">
+                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="12.0" prefWidth="160.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Pagina Principal" textAlignment="JUSTIFY" underline="true">
                     <font>
                         <Font name="System Bold" size="17.0" />
                     </font>
@@ -60,7 +60,10 @@
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
 
-                <HBox prefHeight="287.0" prefWidth="1179.0" />
+                <HBox prefHeight="287.0" prefWidth="1179.0">
+               <children>
+                  <ButtonBar prefHeight="40.0" prefWidth="200.0" />
+               </children></HBox>
             </children>
         </VBox>
     </center>
