--- a/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
+++ b/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
@@ -83,8 +82,8 @@
                         </font>
                     </Label>
                     <TextField fx:id="tf_nombre_transaccion" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
-                    <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Cantidad de Integrantes" />
-                    <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" text="Crear transacción" />
+                    <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Participantes" />
+                    <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" text="Crear Grupo" />
                     <TextArea fx:id="tf_descrip_trans" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
                     <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" text="Eliminar" />
                 </children>
