--- a/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
@@ -112,6 +112,7 @@
                         <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" onAction="#onCrearTransaccionButtonClick" text="Crear transacción" />
                         <TextArea fx:id="tf_descrip_trans" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
                         <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" onAction="#onEliminarTransaccionClick" text="Eliminar" />
+                  <Button fx:id="bt_exportar" layoutX="657.0" layoutY="88.0" mnemonicParsing="false" onAction="#onExportarTransaccionesClick" text="Exportar Transacciones" />
                     </children>
                 </AnchorPane>
                 
