--- a/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
+++ b/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
@@ -74,18 +74,18 @@
                 <AnchorPane maxHeight="887.0" maxWidth="1128.0" minHeight="600.0" minWidth="720.0" prefHeight="600.0" prefWidth="1103.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
                     <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0" />
-                        <ListView fx:id="list_transacciones" layoutX="9.0" layoutY="113.0" prefHeight="460.0" prefWidth="857.0" />
+                        <ListView fx:id="list_grupos" layoutX="9.0" layoutY="113.0" prefHeight="460.0" prefWidth="857.0" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="548.0" layoutX="871.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="228.0" />
-                        <Label fx:id="lb_transaccion" layoutX="934.0" layoutY="91.0" text="Crear Grupo">
+                        <Label fx:id="lb_crearGroup" layoutX="934.0" layoutY="91.0" text="Crear Grupo">
                             <font>
                                 <Font size="14.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="tf_nombre_transaccion" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
-                        <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Participantes" />
+                        <TextField fx:id="tf_nombreGrupo" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
+                        <TextField fx:id="tf_cantidadIntegrantes" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Participantes" />
                         <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" text="Crear Grupo" />
-                        <TextArea fx:id="tf_descrip_trans" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
-                        <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" text="Eliminar" />
+                        <TextArea fx:id="tf_descripcionGrupo" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
+                        <Button fx:id="bt_eliminarGrupo" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" text="Eliminar" />
                     </children>
                 </AnchorPane>
 
