--- a/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
@@ -24,14 +24,6 @@
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <Button fx:id="page01" mnemonicParsing="false" onAction="#loadPage01View" prefHeight="30.0" prefWidth="172.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Perfil" textAlignment="JUSTIFY">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
                 <Button fx:id="page02" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Crear Grupos" textAlignment="JUSTIFY">
                     <font>
                         <Font name="System Bold" size="17.0" />
@@ -48,14 +40,6 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-                <Button fx:id="page031" mnemonicParsing="false" onAction="#loadDemoGroup" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Grupo Demo" textAlignment="JUSTIFY">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
 
             </children>
         </VBox>
@@ -110,9 +94,10 @@
                         <TextField fx:id="tf_pagador_por" layoutX="890.0" layoutY="278.0" prefHeight="26.0" prefWidth="201.0" promptText="Pagado por" />
                         <TextField fx:id="tf_deber_por" layoutX="890.0" layoutY="303.0" prefHeight="26.0" prefWidth="201.0" promptText="A deber por" />
                         <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" onAction="#onCrearTransaccionButtonClick" text="Crear transacción" />
-                        <TextArea fx:id="tf_descrip_trans" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
                         <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" onAction="#onEliminarTransaccionClick" text="Eliminar" />
                   <Button fx:id="bt_exportar" layoutX="657.0" layoutY="88.0" mnemonicParsing="false" onAction="#onExportarTransaccionesClick" text="Exportar Transacciones" />
+                  <Button fx:id="bt_modificar" layoutX="585.0" layoutY="88.0" mnemonicParsing="false" onAction="#onModificarTransaccionClick" text="Modificar" />
+                  <TextField fx:id="tf_descrip_trans" layoutX="887.0" layoutY="167.0" prefHeight="62.0" prefWidth="204.0" promptText="Descripción" />
                     </children>
                 </AnchorPane>
                 
