--- a/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
+++ b/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
@@ -9,25 +9,9 @@
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1350.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scl.pdi.billpaid.MainPanelController">
     <left>
-        <VBox prefHeight="601.0" prefWidth="160.0" style="-fx-background-color: #404040;" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" prefHeight="601.0" prefWidth="160.0" style="-fx-background-color: #404040;" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="page01" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0" prefWidth="172.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Ver Grupos" textAlignment="JUSTIFY" underline="true">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="12.0" prefWidth="160.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Pagina Principal" textAlignment="JUSTIFY" underline="true">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-                <Button fx:id="Creacion" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#clear" prefHeight="30.0" prefWidth="172.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Crear Grupo" textAlignment="JUSTIFY" textFill="#ff0d00" underline="true">
+                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="12.0" prefWidth="160.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Home" textAlignment="JUSTIFY">
                     <font>
                         <Font name="System Bold" size="17.0" />
                     </font>
