--- a/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
@@ -45,7 +45,7 @@
                     <children>
                         <AnchorPane prefHeight="242.0" prefWidth="988.0">
                             <children>
-                                <Button fx:id="page02" layoutX="503.0" layoutY="-5.0" mnemonicParsing="false" onAction="#loadPage01View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Gestionar Grupos" textAlignment="JUSTIFY" underline="true">
+                                <Button fx:id="page02" layoutX="503.0" layoutY="-5.0" mnemonicParsing="false" onAction="#loadPage01View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Gestionar Grupos" textAlignment="JUSTIFY">
                                     <font>
                                         <Font name="System Bold" size="17.0" />
                                     </font>
@@ -53,7 +53,7 @@
                                         <Cursor fx:constant="HAND" />
                                     </cursor>
                                 </Button>
-                                <Button fx:id="bt_demo" layoutX="503.0" layoutY="77.0" mnemonicParsing="false" onAction="#loadDemoGroup" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Grupo Demo" textAlignment="JUSTIFY" underline="true">
+                                <Button fx:id="bt_demo" layoutX="503.0" layoutY="77.0" mnemonicParsing="false" onAction="#loadDemoGroup" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Grupo Demo" textAlignment="JUSTIFY">
                                     <font>
                                         <Font name="System Bold" size="17.0" />
                                     </font>
