--- a/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
@@ -75,17 +75,20 @@
                 <AnchorPane maxHeight="600.0" maxWidth="720.0" minHeight="600.0" minWidth="720.0" prefHeight="600.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
                     <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0" />
-                        <Label fx:id="lb_grupos" layoutX="64.0" layoutY="57.0" text="Grupo de Fiesta">
+                        <Label fx:id="lb_grupos" layoutX="64.0" layoutY="55.0" text="Grupo de Fiesta">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <Label fx:id="lb_cantidad" layoutX="64.0" layoutY="92.0" text="000,00" />
+                        <Label fx:id="lb_cantidad" layoutX="64.0" layoutY="91.0" text="000,00">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
                         <ListView fx:id="list_transacciones" layoutX="10.0" layoutY="113.0" onKeyPressed="#onEliminarTransaccionSUPR" prefHeight="443.0" prefWidth="858.0" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="539.0" layoutX="873.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="231.0" />
-                        <Label fx:id="lb_transaccion" layoutX="934.0" layoutY="91.0" text="Crear transacción">
+                        <Label fx:id="lb_transaccion" layoutX="933.0" layoutY="83.0" text="Transacción">
                             <font>
-                                <Font size="14.0" />
+                                <Font size="24.0" />
                             </font>
                         </Label>
                         <TextField fx:id="tf_nombre_transaccion" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
@@ -98,7 +101,7 @@
                   <Button fx:id="bt_exportar" layoutX="657.0" layoutY="88.0" mnemonicParsing="false" onAction="#onExportarTransaccionesClick" text="Exportar Transacciones" />
                   <Button fx:id="bt_modificar" layoutX="585.0" layoutY="88.0" mnemonicParsing="false" onAction="#onModificarTransaccionClick" text="Modificar" />
                   <TextField fx:id="tf_descrip_trans" layoutX="887.0" layoutY="167.0" prefHeight="62.0" prefWidth="204.0" promptText="Descripción" />
-                  <Button fx:id="bt_modificar" layoutX="925.0" layoutY="506.0" mnemonicParsing="false" onAction="#onGrabarModificacionClick" text="Modificar transacción" visible="false" />
+                  <Button fx:id="bt_modificar" layoutX="925.0" layoutY="506.0" mnemonicParsing="false" onAction="#onGrabarModificacionClick" text="Confirmar Modificación" visible="false" />
                     </children>
                 </AnchorPane>
                 
