--- a/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
@@ -77,7 +77,7 @@
                 </HBox>
                 <HBox prefHeight="254.0" prefWidth="1190.0">
                     <children>
-                        <AnchorPane fx:id="perfil_menu" prefHeight="253.0" prefWidth="1157.0">
+                        <AnchorPane fx:id="perfil_menu" prefHeight="253.0" prefWidth="1157.0" visible="false">
                             <children>
                                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#404040" height="176.0" layoutX="316.0" stroke="BLACK" strokeType="INSIDE" width="575.0" />
                                 <Label layoutX="388.0" layoutY="21.0" text="Usuario" textFill="WHITE" underline="true">
