--- a/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/MainPanelView.fxml
@@ -77,7 +77,7 @@
                 </HBox>
                 <HBox prefHeight="254.0" prefWidth="1190.0">
                     <children>
-                        <AnchorPane fx:id="perfil_menu" prefHeight="253.0" prefWidth="1157.0" visible="false">
+                        <AnchorPane fx:id="perfilMenu" prefHeight="253.0" prefWidth="1157.0" visible="false">
                             <children>
                                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#404040" height="176.0" layoutX="316.0" stroke="BLACK" strokeType="INSIDE" width="575.0" />
                                 <Label layoutX="388.0" layoutY="21.0" text="Usuario" textFill="WHITE" underline="true">
@@ -90,21 +90,21 @@
                                         <Font size="18.0" />
                                     </font>
                                 </Label>
-                                <Label fx:id="perfil_user" layoutX="388.0" layoutY="65.0" text="Bill" textFill="WHITE">
+                                <Label fx:id="perfilUser" layoutX="388.0" layoutY="65.0" text="Bill" textFill="WHITE">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Label>
-                                <PasswordField fx:id="field_pass" layoutX="496.0" layoutY="70.0" />
+                                <PasswordField fx:id="fieldPass" layoutX="496.0" layoutY="70.0" />
                                 <Label layoutX="682.0" layoutY="21.0" text="Contraseña Nueva" textFill="WHITE" underline="true">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
                                 </Label>
-                                <PasswordField fx:id="field_newpass" layoutX="680.0" layoutY="70.0" />
+                                <PasswordField fx:id="fieldNewpass" layoutX="680.0" layoutY="70.0" />
                                 <Button fx:id="bt_cambiarpass" layoutX="604.0" layoutY="126.0" mnemonicParsing="false" onAction="#onCambiarpass" text="Cambiar Contraseña" />
                                 <Label fx:id="ok" layoutX="755.0" layoutY="130.0" textFill="WHITE" />
-                        <Label fx:id="lb_premium" layoutX="391.0" layoutY="123.0" text="role" textFill="WHITE">
+                        <Label fx:id="lbpremium" layoutX="391.0" layoutY="123.0" text="role" textFill="WHITE">
                            <font>
                               <Font size="18.0" />
                            </font>
